# vengine3D

./: .clang-format  CMakeLists.txt  README.md
Content/Mesh/: uechar.FBX
Content/Mesh/skysphere/: skysphere.fbx
Content/Shaders/: animdefault.vert  default.frag  default.vert
EngineSource/: AnimFrame.h  AnimTrack.h  AnimTransformTrack.h  Animation.cpp  Animation.h  AssetTypeTraits.h  EngineCore.h  EngineLibs.h  EnginePlatform.h  EngineProperty.h  Material.h  SkeletalMesh.h  SkeletalMeshSection.h  SkeletalMeshSectionRenderData.h  StaticMesh.cpp  StaticMesh.h  span.h
EngineSource/Components/: CameraComponent.h  InputComponents.h  StaticMeshComponent.h
EngineSource/Core/: Delegate.h  VEngine.cpp  VEngine.h  VEngineBase.cpp  VEngineBase.h  Window.h  World.cpp  World.h
EngineSource/Core/Managers/: EntityManager.h  (+1 more)
EngineSource/Entities/: SkySphere.h
EngineSource/Input/: InputKey.h
EngineSource/Math/: Matrix4.h  Quat.h
EngineSource/Render/: IndexBuffer.cpp  ObjectBuffer.h  RenderObjectData.h  Texture.cpp  Uniform.cpp  Uniform.h  opengl_glad.h
EngineSource/Systems/: ControllerSystem.cpp  ControllerSystem.h  RenderSystem.cpp  RenderSystem.h
EngineTests/: main.cpp
GameSource/: AstroCharacter.h  AstroWorld.cpp  AstroWorld.h  BaseCharacter.h  HaloCharacter.h  HaloWorld.cpp  HaloWorld.h  main.cpp
Sources/: AnimTrack.h  AnimTransformTrack.cpp  AnimTransformTrack.h  Animation.cpp  Animation.h  AssetImporter.cpp  AssetImporter.h  Bone.h  Delegate.h  EngineCore.h  EngineLibs.h  EnginePlatform.h  EngineTypes.h  EngineUtils.h  Material.h  SkeletalMesh.cpp  SkeletalMesh.h  SkeletalMeshElement.h  SkeletalMeshModel.h  SkeletalMeshRenderData.cpp  SkeletalMeshRenderData.h  SkeletalMeshSection.h  SkeletalMeshSectionRenderData.h  Skeleton.cpp  Skeleton.h  StaticMesh.cpp  StaticMesh.h  Transform.h  VEngine.cpp  VEngine.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
Sources/Components/: CameraComponent.cpp  CameraComponent.h  InputComponents.cpp  InputComponents.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Sources/Core/: CoreProperty.h  VEngine.cpp  VEngine.h  VEngineBase.cpp  VEngineBase.h  Window.cpp  Window.h
Sources/ECS/: Component.h  ComponentManage.h  ComponentManager.h  ECS.h  ECSProperty.h  ECSTest.cpp  ECSTest.h  Entity.h  EntityManager.h  Handle.h  IComponent.h  IEntity.h  IdManager.cpp  IdManager.h  SystemManager.h  Types.h  VObject.h
Sources/Input/: InputKeyState.h  KeyboardKey.h  Keystate.h  MouseKey.h
Sources/Math/: MathConstant.h  MathUtils.h  Matrix3.h  Vector.h
Sources/Render/: IndexBuffer.cpp  IndexBuffer.h  ObjectBuffer.cpp  ObjectBuffer.h  RenderObjectData.cpp  RenderObjectData.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  opengl_glad.h
Sources/Rendering/: IndexBuffer.h  RenderEngine.cpp  RenderEngine.h  RenderObjectData.cpp  RenderObjectData.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Sources/Systems/: ControllerSystem.cpp  ControllerSystem.h  RenderSystem.cpp  RenderSystem.h
shaders/: lit.frag  static.vert
shaders1/: lit.frag
sources/: EngineCore.h  EngineLibs.h  EngineTypes.h  EngineUtils.h  RenderEngine.cpp  RenderEngine.h  VEngine.cpp  VEngine.h  Window.cpp  Window.h  main.cpp
sources/Rendering/: RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Texture.cpp
src/: Render.cpp  Render.h  Window.cpp  Window.h  World.cpp  main.cpp  stdlibraries.h  stdlibs.h  ve_core.h  ve_engine_settings.cpp  ve_engine_settings.h  ve_global_parameters.cpp  ve_global_parameters.h  ve_render.cpp  ve_render.h  ve_stdlibs.h  ve_types.h  ve_utils.h  ve_window.cpp  ve_window.h  ve_world.cpp  ve_world.h
src/Collision/: gjk.cpp  gjk.h  ve_collision_common.h  ve_epa.cpp  ve_epa.h  ve_epa_face.h  ve_epa_polytope.cpp  ve_epa_unique_edges.h  ve_gjk.cpp  ve_gjk.h  ve_minkowski_sum.h  ve_support_point.h
src/Control/: ve_keyboard.hpp  ve_keystate.hpp  ve_mouse.hpp  ve_mousekey.hpp
src/Math/: ve_color.h  ve_matrix22.h  ve_matrix22.hpp  ve_matrix33.h  ve_matrix33.hpp  ve_transform.h  ve_transform.hpp  ve_vector.h  ve_vector.hpp
src/Object/: ve_box_collider.cpp  ve_box_collider.h  ve_box_shape.cpp  ve_box_shape.h  ve_box_shape.hpp  ve_camera.cpp  ve_camera.h  ve_collider.cpp  ve_collider.h  ve_rigid_body.cpp  ve_rigid_body.hpp  ve_shape.cpp  ve_shape.h  ve_sphere_collider.cpp  ve_sphere_collider.h  ve_sphere_shape.cpp  ve_sphere_shape.h  ve_sphere_shape.hpp
src/animation/: cgltf.cpp  ve_clip.cpp  ve_clip.h  ve_frame.h  ve_gltfloader.cpp  ve_gltfloader.h  ve_interpolation.h  ve_mesh.cpp  ve_mesh.h  ve_pose.cpp  ve_pose.h  ve_skeleton.cpp  ve_skeleton.h  ve_tarck.cpp  ve_tarck.h  ve_track.cpp  ve_track.h  ve_transform_track.cpp  ve_transform_track.h
src/collision/: CollisionSystem.h  ve_collision.cpp  ve_collision.h  ve_collision_system.h  ve_contact_manifold.h  ve_contact_points.cpp  ve_contact_points.h  ve_epa.h  ve_epa_polytope.h  ve_gjk.cpp  ve_gjk.h  ve_intersection.h  ve_minkowski_sum.h  ve_support_point.h
src/control/: ve_keyboard.h  ve_keystate.h  ve_mouse.h
src/glad/: glad.cpp  glad.h
src/imgui/: imgui.cpp
src/math/: ve_bezier.h  ve_color.h  ve_double_vertex_buffer.h  ve_math_utility.h  ve_matrix3.h  ve_matrix33.h  ve_matrix4.h  ve_quaternion.h  ve_quaternions.h  ve_splines.h  ve_transform.h  ve_vector.h  ve_vector4.h
src/objects/: colliders.h  ve_actor.h  ve_blockjoints_actor.h  ve_box_collider.cpp  ve_box_collider.h  ve_camera.cpp  ve_camera.h  ve_collider.cpp  ve_collider.h  ve_colliders.h  ve_face.h  ve_ragdoll_actor.h  ve_rigid_body.cpp  ve_rigid_body.h  ve_sphere_collider.cpp  ve_sphere_collider.h
src/physic/: ve_contact_solver.cpp  ve_contact_solver.h
src/physics/: ve_ball_socket_joint_solver.h  ve_contact_solver.cpp  ve_contact_solver.h  ve_contact_system.h  ve_mouse_joint_solver.h
src/render/: ve_attribute.cpp  ve_attribute.h  ve_debug_draw.cpp  ve_debug_draw.h  ve_draw.cpp  ve_draw.h  ve_index_buffer.cpp  ve_index_buffer.h  ve_render.cpp  ve_render.h  ve_shader.cpp  ve_shader.h  ve_texture.cpp  ve_texture.h  ve_uniform.cpp  ve_uniform.h
(+89 files in other folders)
